# MuscleOptimizer

./: CMakeLists.txt  NOTICE.txt  README.md  genindex.html  guiplugin.html  index.html  installation.html  matlab.html  muscleOptimizer.html  objects.inv  search.html  searchindex.js  setupfile.html  standalone.html
Gui/: README.md  build.xml  manifest.mf
Gui/nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.properties  project.xml
Gui/src/org/opensim/muscleoptimizer/: Bundle.properties  MuscleOptimizeToolAction.java  MuscleOptimizeToolModel.java  MuscleOptimizeToolPanel.form  MuscleOptimizeToolPanel.java  QuantityNameFilterCoordinatePanel.form  QuantityNameFilterCoordinatePanel.java  QuantityNameFilterMusclePanel.form  QuantityNameFilterMusclePanel.java  QuantityNameFilterTableModel.java  layer.xml
_sources/: installation.txt  setupfile.txt
_static/: basic.css  classic.css
application/: CMakeLists.txt  optimizeMuscles.cpp
cmake/: FindOpenSim.cmake
doc/: CMakeLists.txt  conf.py.in
doc/help/: MO.rst  guiplugin.rst  index.rst  installation.rst  literature.bib  literature_matlab.bib  matlab.rst  muscleOptimizer.rst  setupfile.rst  standalone.rst
doc/static/: MO.css
html/: .buildinfo
lib/: CMakeLists.txt
lib/include/OpenSim/Tools/: MuscleOptimizeTool.h  MuscleOptimizer.h
lib/src/: MuscleOptimizeTool.cpp  MuscleOptimizer.cpp
matlab/MuscleParOptTool/: optimMuscleParams.m
matlab/MuscleParOptTool/private/: getIndipCoordAndJoint.m  getJointsSpannedByMuscle.m  sampleMuscleQuantities.m
test/: CMakeLists.txt  optimizeAndTest.cmake
test/Example1/: run_example1.m  setup_example0.xml  setup_example1.xml
test/Example1/MSK_Models/: Reference_Hamner_L.osim  Target_Hamner_scaled_L.osim
test/Example1/Optim_Models/: Target_Hamner_scaled_L_opt_N10.osim
test/Example2/: run_example2.m  setup_example2.xml
test/Example2/MSK_Models/: Reference_Arnold_R.osim  Target_LHDL_Schutte_R.osim
test/Example2/Optim_Models/: Target_LHDL_Schutte_R_opt_N10.osim
test/Hamner/: basicTest.xml  cpp_test0_Optimized_Hamner_Scaled_adj_rangeROM_L.osim  hamner.xml
test/Hamner/output_cpp/: cpp_Optimized_Hamner_Scaled_adj_rangeROM_L.osim
test/Hamner/output_matlab/: Optimized_Target_Hamner_Scaled_adj_rangeROM_L.osim
test/WCB/: wcb.xml
test/WCB/1_Starting_MSK_Models/: Target_GenericFemale_WCB_Schuttev3.2.osim  Template_Case3_Arnold_R.osim
test/WCB/1b_preprocessedTargetModel/: Target_GenericFemale_WCB_Schuttev3.2_wPennAngles.osim
test/WCB/output_cpp/: cpp_Optimized_Target_GenericFemale_WCB_Schuttev3.2.osim
test/WCB/output_matlab/: Optimized_Target_GenericFemale_WCB_Schuttev3.2_wPennAngles.osim
test/matlab_code/: hamner.m  muscleOptimizerCore.m  wcb.m
test/matlab_code/private/: SampleMuscleQuantities.m  getIndipCoordAndJoint.m
test/muscleParameterComparer/: CMakeLists.txt  muscleParameterComparer.cpp
wrappers/: CMakeLists.txt  muscleOptimizer.i
